# rockband-app

./: db.sqlite3  pyproject.toml
backend/: permissions.py  settings.py  urls.py
bands/: admin.py  models.py  serializers.py  urls.py  views.py
bands/migrations/: 0001_initial.py  0002_rename_book_band.py  0003_alter_band_genres.py  0004_alter_band_year_formed.py  0005_band_active_alter_band_genres.py  0006_band_member.py  0007_band_label_alter_band_member.py  0008_band_supporting_members_alter_band_label_and_more.py  0009_rename_member_band_leader_and_more.py  0010_alter_band_leader.py  0011_album.py  0012_band_author.py
labels/: models.py  serializers.py  urls.py  views.py
labels/migrations/: 0001_initial.py
members/: models.py
members/migrations/: 0001_initial.py
